salesforce-app/src/objects/CurrencyTable__c.object
<CustomObject>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ValidDate__c</fullName>
        <label>Valid Date</label>
        <type>Date</type>
    </fields>
    <label>Currency Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Currency Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>